--- a/Codigo_analisis.ipynb
+++ b/Codigo_analisis.ipynb
@@ -752,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb0f4fe3b20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb7e02a68e0>"
       ]
      },
      "execution_count": 5,
@@ -1229,7 +1229,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb1201fc6d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb7e02aa6d0>"
       ]
      },
      "execution_count": 8,
@@ -1481,7 +1481,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb0f4457610>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb7b2d2c6d0>"
       ]
      },
      "execution_count": 11,
@@ -2526,6 +2526,169 @@
     "tot_tax_0.columns = tot_tax_0.columns.get_level_values(0)+\"_\"+tot_tax_0.columns.get_level_values(1)\n",
     "tot_tax_0 = tot_tax_0[tot_tax_0[\"Stage_count\"]>=50]\n",
     "tot_tax_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total_Taxable_Amount_count</th>\n",
+       "      <th>Total_Taxable_Amount_proporcion_0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Billing_Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Australia</th>\n",
+       "      <td>382</td>\n",
+       "      <td>0.007853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Austria</th>\n",
+       "      <td>56</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Belgium</th>\n",
+       "      <td>70</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>90</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>670</td>\n",
+       "      <td>0.004478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>India</th>\n",
+       "      <td>236</td>\n",
+       "      <td>0.004237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Italy</th>\n",
+       "      <td>93</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Japan</th>\n",
+       "      <td>1290</td>\n",
+       "      <td>0.000775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Luxembourg</th>\n",
+       "      <td>52</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>188</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Singapore</th>\n",
+       "      <td>209</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spain</th>\n",
+       "      <td>104</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sri Lanka</th>\n",
+       "      <td>67</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thailand</th>\n",
+       "      <td>75</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>88</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>1059</td>\n",
+       "      <td>0.153919</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Total_Taxable_Amount_count  Total_Taxable_Amount_proporcion_0\n",
+       "Billing_Country                                                               \n",
+       "Australia                               382                           0.007853\n",
+       "Austria                                  56                           0.000000\n",
+       "Belgium                                  70                           0.000000\n",
+       "France                                   90                           0.000000\n",
+       "Germany                                 670                           0.004478\n",
+       "India                                   236                           0.004237\n",
+       "Italy                                    93                           0.000000\n",
+       "Japan                                  1290                           0.000775\n",
+       "Luxembourg                               52                           0.000000\n",
+       "Netherlands                             188                           0.000000\n",
+       "Singapore                               209                           0.000000\n",
+       "Spain                                   104                           0.000000\n",
+       "Sri Lanka                                67                           0.000000\n",
+       "Thailand                                 75                           0.000000\n",
+       "United Kingdom                           88                           0.011364\n",
+       "United States                          1059                           0.153919"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def proporcion_0(x):\n",
+    "    return (x == 0).sum()/len(x)\n",
+    "\n",
+    "oportunidades_ganadas = datos[datos[\"Stage\"] == \"Closed Won\"]\\\n",
+    "        [[\"Opportunity_ID\",\"Billing_Country\",\"Total_Taxable_Amount\"]].drop_duplicates(subset=[\"Opportunity_ID\"])\n",
+    "#asdasd = oportunidades_ganadas.groupby(\"Billing_Country\").\\\n",
+    "#        agg({\"Total_Taxable_Amount\":\"count\", \"Total_Taxable_Amount\":proporcion_0})\n",
+    "data_por_pais = oportunidades_ganadas.groupby(\"Billing_Country\").\\\n",
+    "        agg({\"Total_Taxable_Amount\":[\"count\", proporcion_0]})\n",
+    "level_0 = data_por_pais.columns.get_level_values(0)\n",
+    "level_1 = data_por_pais.columns.get_level_values(1)\n",
+    "data_por_pais.columns = level_0 + \"_\" + level_1\n",
+    "data_por_pais = data_por_pais[data_por_pais[\"Total_Taxable_Amount_count\"] >= 50]\n",
+    "data_por_pais"
    ]
   },
   {
